# big-brother

./: .dockerignore  Cargo.toml  Dockerfile  README.md  rustc.wrap
helm_chart/: Chart.yaml  values.yaml
helm_chart/templates/: app.yaml  rbac.yaml
src/: args.rs  bearer.rs  error.rs  event.rs  main.rs  utils.rs
src/engine/: cache.rs  mod.rs  to_destream.unused.rs  to_serde.rs
src/engine/k8s_resource_output/: change.unused.rs  metadata.rs  mod.rs
src/k8s_client/: mod.rs
src/k8s_client/api/: mod.rs  resource.rs  response_to_result.unused.rs
src/k8s_client/api/api_group/: api_group_list.rs  mod.rs
src/k8s_client/api/api_resource/: mod.rs
src/k8s_client/api/api_version/: mod.rs
src/k8s_client/api/cluster_config/: error.rs  kubeconfig.rs  mod.rs
