[package]
name = "k8s-watcher"
version = "0.1.0"
edition = "2021"

[profile.release]
overflow-checks = true
lto = true

[dependencies]
futures = "0.3.16"
tokio = { version = "1.12.0", default-features=false, features=["rt-multi-thread", "io-std", "macros"] }
tokio-stream = { version = "0.1.7", default-features=false, features=[ "sync" ] }
tokio-util = "0.6.7"

reqwest = { version = "0.11.4", default-features=false, features=["rustls-tls", "json", "stream"] }

async-trait = "0.1.51"
destream = "0.5.0"
destream_json = { path = "deps/destream_json", features=["value", "tokio-io"] }

bytes = "1.0.1"
async-stream = "0.3.2"
url = "2.2.2"
actix = "0.12.0"

serde = "1"
serde_json = "1"
actix-web = { version = "4.0.0-beta.9", default-features=false }
backoff = { version="0.3.0", features=["tokio"] }
number-general = "0.3.10"
http = "0.2.4"
thiserror = "1.0.26"
qstring = "0.7.2"
uriparse = "0.6.3"

[dev-dependencies]
tokio-test = "0.4.2"
