[package]
name = "big-brother"
version = "0.1.0"
edition = "2018"

[profile.release]
overflow-checks = true
lto = true

[dependencies]
futures-util = "0.3.16"
tokio = { version = "1.12.0", default-features=false, features=["rt-multi-thread", "io-std", "macros"] }
tokio-stream = { version = "0.1.7", default-features=false, features=[ "sync" ] }

reqwest = { version = "0.11.4", default-features=false, features=["rustls-tls", "json", "stream"] }
url = "2.2.2"

serde = "1"
serde_json = "1"
async-trait = "0.1.51"
destream = "0.5.0"
destream_json = { path = "deps/destream_json", features=["value", "tokio-io"] }
number-general = "0.3.10"

actix-web = { version = "4.0.0-beta.9", default-features=false }
backoff = { version="0.3.0", features=["tokio"] }

thiserror = "1.0.26"
qstring = "0.7.2"
uriparse = "0.6.3"
serde_yaml = "0.8.17"
dirs = "4.0.0"
base64 = "0.13.0"
itertools = "0.10.1"

[dev-dependencies]
tokio-test = "0.4.2"
